# managesieve-cli

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
managesieve_cli/: cli.py
tests/: test_sievescripts.py
