[tool.poetry]
name = "managesieve-cli"
version = "0.1.0"
description = ""
authors = ["larsrinn <lm.rinn@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sievelib = "^1.1.1"
typer = "^0.1.1"
colorama = "^0.4.3"
wasabi = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"
pre-commit-hooks = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
